# literature-push-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: literature.yml
data/: history.json
docs/superpowers/plans/: 2026-07-10-literature-push-agent.md
docs/superpowers/specs/: 2026-07-10-literature-push-agent-design.md
src/: __init__.py  ai_enrichment.py  config.py  dedup.py  exporters.py  history.py  mailer.py  main.py  models.py  ranking.py
src/fetchers/: __init__.py  base.py  crossref.py  openalex.py  semantic_scholar.py
tests/: test_ai_enrichment.py  test_config.py  test_dedup.py  test_exporters.py  test_fetchers.py  test_history.py  test_mailer.py  test_main.py  test_ranking.py  test_workflow.py
